# ipr

./: README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
ipr_service/: main.py  service.py  settings.py
ipr_service/schemas/: __init__.py  ipr.py
