[tool.poetry]
name = "ipr"
version = "0.1.0"
description = ""
authors = ["Chaban Sergey <loriston@rambler.ru>"]
readme = "README.md"
packages = [{include = "ipr_service"}]
exclude = [
            "ipr_service/certs",
            "ipr_service/main.py",
            "ipr_service/service.py",
            "ipr_service/settings.py"
        ]

[tool.poetry.dependencies]
python = "3.11.1"

aiohttp = "3.9.3"
pydantic-settings = "2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
pytest = "^8.0.0"


[tool.poetry.group.custom.dependencies]
common-core = {path = "../common/common_core", develop = true}
common-rabbit = {path = "../common/common_rabbit", develop = true}
gateway-service = {path = "../gateway_service", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
